--- a/_config.yml
+++ b/_config.yml
@@ -33,16 +33,16 @@ portfolio:
   -
     id: "portrait"
     name: "Portrait"
-    images: 
-    - images/portrait/Bailey 2.jpg
-    - images/portrait/Bailey 5.jpg
-    - images/portrait/Bailey 6.jpg
-    - images/portrait/IMG_9526.jpg
-    - images/portrait/IMG_9533.jpg
-    - images/portrait/IMG_9536.jpg
-    - images/portrait/Marina-1.jpg
-    - images/portrait/Marina-2.jpg
-    - images/portrait/Marina-6.jpg
+    images:
+    - images/portrait/Allyweb1.jpg
+    - images/portrait/Allyweb2.JPG
+    - images/portrait/Allyweb3.JPG
+    - images/portrait/Baileyweb1.jpg
+    - images/portrait/Baileyweb2.jpg
+    - images/portrait/Baileyweb3.jpg
+    - images/portrait/Marinaweb1.jpg
+    - images/portrait/Marinaweb2.jpg
+    - images/portrait/Marinaweb3.jpg
     
   -
     id: "wedding"
@@ -57,6 +57,21 @@ portfolio:
     - images/wedding/Perez Wedding-210.jpg
     - images/wedding/Perez Wedding-154.jpg
     - images/wedding/Perez Wedding-17.jpg
+
+
+  -
+    id: "engagements"
+    name: "Engagements"
+    images: 
+    - images/engagements/Engagementsweb-1.jpg
+    - images/engagements/Engagementsweb-2.jpg
+    - images/engagements/Engagementsweb-3.jpg
+    - images/engagements/Engagementsweb-4.jpg
+    - images/engagements/Engagementsweb-5.jpg
+    - images/engagements/Engagementsweb-6.jpg
+    - images/engagements/Engagementsweb-7.jpg
+    - images/engagements/Engagementsweb-8.jpg
+  
         
 background:         "http://apple.wallpapersfine.com/wallpapers/original/1242x2208/w-5273.jpg"
 
