--- a/_config.yml
+++ b/_config.yml
@@ -12,24 +12,27 @@ portfolio:
     id: "adventure"
     name: "Adventure"
     images: 
-    - images/adventure/DakotaForest.jpg
-    - images/adventure/DakotaTrainDesaturated.jpg
-    - images/adventure/StarStruck.jpg
+    - images/adventure/adventure-1.jpg
+    - images/adventure/adventure-2.jpg
+    - images/adventure/adventure-3.jpg
+    - images/adventure/adventure-4.jpg
+    - images/adventure/adventure-5.jpg
+    - images/adventure/adventure-6.jpg
+    - images/adventure/adventure-7.jpg
+    - images/adventure/adventure-8.jpg
   -
     id: "landscape"
     name: "Landscape"
     images: 
-    - images/landscape/BryceCrack.jpg
-    - images/landscape/BryceThorsHammer.jpg
-    - images/landscape/BryceWall.jpg
-    - images/landscape/IMG_2751.jpg
-    - images/landscape/IMG_2772.jpg
-    - images/landscape/LavaPointEnteranceZion-3.jpg
-    - images/landscape/LavaPointEnteranceZion-4.jpg
-    - images/landscape/LookUpBryce.jpg
-    - images/landscape/MilkyWay.jpg
-    - images/landscape/TinyTree.jpg
-    - images/landscape/Tree.jpg
+    - images/landscape/landscape-1.jpg
+    - images/landscape/landscape-2.jpg
+    - images/landscape/landscape-3.jpg
+    - images/landscape/landscape-4.jpg
+    - images/landscape/landscape-5.jpg
+    - images/landscape/landscape-6.jpg
+    - images/landscape/landscape-7.jpg
+    - images/landscape/landscape-8.jpg
+    - images/landscape/landscape-9.jpg
   -
     id: "portrait"
     name: "Portrait"
@@ -43,7 +46,6 @@ portfolio:
     - images/portrait/Marinaweb1.jpg
     - images/portrait/Marinaweb2.jpg
     - images/portrait/Marinaweb3.jpg
-    
   -
     id: "wedding"
     name: "Wedding"
@@ -57,22 +59,23 @@ portfolio:
     - images/wedding/Perez Wedding-210.jpg
     - images/wedding/Perez Wedding-154.jpg
     - images/wedding/Perez Wedding-17.jpg
-
-
-  -
-    id: "engagements"
-    name: "Engagements"
-    images: 
-    - images/engagements/Engagementsweb-1.jpg
-    - images/engagements/Engagementsweb-2.jpg
-    - images/engagements/Engagementsweb-3.jpg
-    - images/engagements/Engagementsweb-4.jpg
-    - images/engagements/Engagementsweb-5.jpg
-    - images/engagements/Engagementsweb-6.jpg
-    - images/engagements/Engagementsweb-7.jpg
-    - images/engagements/Engagementsweb-8.jpg
   
-        
+  -
+    id: "wildlife"
+    name: "Wildlife"
+    images:
+    - images/wildlife/wildlife-1.jpg
+    - images/wildlife/wildlife-2.jpg
+    - images/wildlife/wildlife-3.jpg
+    - images/wildlife/wildlife-4.jpg
+    - images/wildlife/wildlife-5.jpg
+    - images/wildlife/wildlife-6.jpg
+    - images/wildlife/wildlife-7.jpg
+    - images/wildlife/wildlife-8.jpg
+    - images/wildlife/wildlife-9.jpg
+    - images/wildlife/wildlife-10.jpg
+
+
 background:         "http://apple.wallpapersfine.com/wallpapers/original/1242x2208/w-5273.jpg"
 
 paginate:           5
