Adding a facebook page

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 name:               "Michelle Gray"
-description:        "A minimalistic jekyll theme for humans"
+description:        "Photographer"
 
 url:                ""
 author:             "mermaid"
 email:              "michellecgray1%40gmail%2Ecom"
 instagram:          "m.c._photography_"
+facebook:           "PhotoMichelleChristine"
 
 initial-portfolio: adventure
 portfolio: 
