Updating the photos and adding a bunch of wedding ones in

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,14 @@ portfolio:
     - images/wedding/Perez Wedding-210.jpg
     - images/wedding/Perez Wedding-154.jpg
     - images/wedding/Perez Wedding-17.jpg
+    - images/wedding/web-1.jpg
+    - images/wedding/web-2.jpg
+    - images/wedding/web-3.jpg
+    - images/wedding/web-4.jpg
+    - images/wedding/web-5.jpg
+    - images/wedding/web-6.jpg
+    - images/wedding/web-7.jpg
+    - images/wedding/web-8.jpg
   
   -
     id: "wildlife"
