Adding in more adventure photos, removing some old ones. Added loading indicators for the sections

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name:               "Michelle Gray"
+name:               "Michelle Holiman"
 description:        "Photographer"
 
 url:                ""
 author:             "mermaid"
-email:              "michellecgray1%40gmail%2Ecom"
+email:              "michellecholiman%40gmail%2Ecom"
 instagram:          "m.c._photography_"
 facebook:           "PhotoMichelleChristine"
 
@@ -21,6 +21,7 @@ portfolio:
     - images/adventure/adventure-6.jpg
     - images/adventure/adventure-7.jpg
     - images/adventure/adventure-8.jpg
+    - images/adventure/adventure-9.jpg
   -
     id: "landscape"
     name: "Landscape"
@@ -47,28 +48,27 @@ portfolio:
     - images/portrait/Marinaweb1.jpg
     - images/portrait/Marinaweb2.jpg
     - images/portrait/Marinaweb3.jpg
-  -
-    id: "wedding"
-    name: "Wedding"
-    images: 
-    - images/wedding/Perez Wedding-346.jpg
-    - images/wedding/Perez Wedding-323.jpg
-    - images/wedding/Perez Wedding-312.jpg
-    - images/wedding/Perez Wedding-272.jpg
-    - images/wedding/Perez Wedding-270.jpg
-    - images/wedding/Perez Wedding-236.jpg
-    - images/wedding/Perez Wedding-210.jpg
-    - images/wedding/Perez Wedding-154.jpg
-    - images/wedding/Perez Wedding-17.jpg
-    - images/wedding/web-1.jpg
-    - images/wedding/web-2.jpg
-    - images/wedding/web-3.jpg
-    - images/wedding/web-4.jpg
-    - images/wedding/web-5.jpg
-    - images/wedding/web-6.jpg
-    - images/wedding/web-7.jpg
-    - images/wedding/web-8.jpg
-  
+  # -
+  #   id: "wedding"
+  #   name: "Wedding"
+  #   images: 
+  #   - images/wedding/Perez Wedding-346.jpg
+  #   - images/wedding/Perez Wedding-323.jpg
+  #   - images/wedding/Perez Wedding-312.jpg
+  #   - images/wedding/Perez Wedding-272.jpg
+  #   - images/wedding/Perez Wedding-270.jpg
+  #   - images/wedding/Perez Wedding-236.jpg
+  #   - images/wedding/Perez Wedding-210.jpg
+  #   - images/wedding/Perez Wedding-154.jpg
+  #   - images/wedding/Perez Wedding-17.jpg
+  #   - images/wedding/web-1.jpg
+  #   - images/wedding/web-2.jpg
+  #   - images/wedding/web-3.jpg
+  #   - images/wedding/web-4.jpg
+  #   - images/wedding/web-5.jpg
+  #   - images/wedding/web-6.jpg
+  #   - images/wedding/web-7.jpg
+  #   - images/wedding/web-8.jpg
   -
     id: "wildlife"
     name: "Wildlife"
