Another email change

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description:        "Photographer"
 
 url:                ""
 author:             "mermaid"
-email:              "michellecholiman%40gmail%2Ecom"
+email:              "michellecholiman@gmail.com"
 instagram:          "m.c._photography_"
 facebook:           "PhotoMichelleChristine"
 
