Adding 2 more photos

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ portfolio:
     - images/adventure/adventure-10
     - images/adventure/adventure-11
     - images/adventure/adventure-12
+    - images/adventure/adventure-13
+    - images/adventure/adventure-14
   -
     id: "people"
     name: "People"
