I think it didn't get rebuilt somehow?

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ about: "<p>Michelle Holiman is an avid hiker, scuba diver, and lover of the natu
 <p>Michelle uses her creative eye to capture the outdoor scenes she so loves. She focuses on communicating the wonder and story of the spaces she explores.</p>
 <p>Michelle currently works as a Digital Marketing Specialist in Northern Utah. She is most happy traveling with her spouse Cameron, eating good food, and snuggling her two cats.</p>"
 
-initial-portfolio: adventure
+initial-portfolio: ''
 portfolio: 
   - 
     id: "adventure"
