--- a/_config.yml
+++ b/_config.yml
@@ -100,3 +100,9 @@ defaults:
       type:         "pages"
     values:
       layout:       "page"
+  -
+    scope:
+      path:         ""
+      type:         "posts"
+    values:
+      layout:       "post"
