--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ paginate:           5
 paginate_path:      "/page:num/"
 
 baseurl:            ""
-permalink:          /:year/:month/:day/:title/
+permalink:          /blog/:year/:month/:day/:title/
 
 markdown:           kramdown
 
