removing facebook button

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url:                ""
 author:             "mermaid"
 email:              "michellecholiman@gmail.com"
 instagram:          "michellecholiman"
-facebook:           "michellecholiman"
+# facebook:           "michellecholiman"
 about: "<p>Michelle Holiman is an avid hiker, scuba diver, and lover of the natural world. She has a BFA in Photography from Southern Utah University and has been using that degree to create art that has been displayed in the Southern Utah Museum of Art and the Hogle Zoo. She has also been published in news articles, on many professional websites, and in calendars and books.</p>
 <p>Michelle uses her creative eye to capture the outdoor scenes she so loves. She focuses on communicating the wonder and story of the spaces she explores.</p>
 <p>She is most happy traveling with her spouse Cameron, eating good food, and snuggling her two cats.</p>"
